--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: 30px;
     background-color: #a8b0f6;
-    height: 200px;
+    height: 240px;
     grid-area: n;
     text-align: right;
     font-family: 'Didact Gothic', sans-serif;
@@ -18,6 +18,10 @@
 .nav a {
     text-decoration: none;
     color: white;
+}
+
+.nav a:hover {
+    cursor: pointer;
 }
 
 .activeC:focus{
