--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -6,13 +6,11 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 220px;
 }
 
 .PersonalInfoBlock h1 {
     display: block;
-    height: 88px;
-    display: block;
+    height: 50px;
     margin-left: 40px;
     font-size: 28pt;
     font-family: 'Didact Gothic', sans-serif;
@@ -27,4 +25,18 @@
 
 .avatar {
     width: 200px;
+}
+
+.PersonalInfoBlock b {
+    display: block;
+    float: left;
+    font-size: 14pt;
+    font-family: 'Didact Gothic', sans-serif;
+    font-weight: 800;
+    margin-right: 20px;
+}
+
+.PersonalInfoBlock i {
+    font-style: italic;
+    font-weight: 800;
 }
