--- a/src/components/Profile/ProfileInfo/Contacts/Contact.module.css
+++ b/src/components/Profile/ProfileInfo/Contacts/Contact.module.css
@@ -1,13 +1,31 @@
-.AboutUserBlock {
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-}
 
 .PersonalInfoBlock {
     display: flex;
     flex-direction: row;
     width: 100%;
+}
+
+.PersonalInfoBlock input {
+    border: none;
+    border-bottom: 1px solid #a8b0f6;
+    width: auto;
+}
+
+.PersonalInfoBlock img:hover {
+    cursor: pointer;
+}
+
+.PersonalInfoBlock:hover img {
+    display: block;
+}
+
+.PersonalInfoBlock button {
+    font-size: 7pt;
+    height: 18px;
+    border: none;
+    border-radius: 5px;
+    background-color: #a8b0f6;
+    color: #fff;
 }
 
 .PersonalInfoBlock h1 {
@@ -23,10 +41,6 @@
     font-size: 14pt;
     line-height: 1.2;
     font-family: 'Didact Gothic', sans-serif;
-}
-
-.avatar {
-    width: 200px;
 }
 
 .PersonalInfoBlock b {
