--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -25,8 +25,12 @@
     font-family: 'Didact Gothic', sans-serif;
 }
 
-.avatar {
-    width: 200px;
+.PersonalInfoBlock img {
+    width: 300px;
+}
+
+.PersonalInfoBlock img:hover {
+    cursor: pointer;
 }
 
 .PersonalInfoBlock b {
