--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,8 +9,11 @@
     grid-area: h;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 50px;
 }
+
 .logo {
     width: 200px;
     display: flex;
